--- a/index.html
+++ b/index.html
@@ -3320,10 +3320,10 @@
                     </div>
                 </div>
                 <!-- Already subscribed indicator -->
-                <div id="notif-active-bar" style="display:none;align-items:center;gap:10px;padding:10px 14px;margin-bottom:16px;border-radius:4px;border:2px solid #4a5d23;background:#1a2508;">
-                    <i class="fas fa-bell" style="color:#6b8e23;font-size:1rem;"></i>
-                    <span style="font-family:'Minecraft',sans-serif;font-size:0.76rem;color:#8ab04a;font-weight:700;flex:1;" data-ru="Уведомления включены" data-en="Notifications enabled">Уведомления включены</span>
-                    <button onclick="disableNotifications()" style="padding:5px 10px;background:transparent;color:#c62828;border:2px solid #8b1a1a;border-radius:2px;font-family:'Minecraft',sans-serif;font-size:0.7rem;cursor:pointer;font-weight:700;" data-ru="Выключить" data-en="Disable">Выключить</button>
+                <div id="notif-active-bar" style="display:none;align-items:center;gap:10px;padding:10px 14px;margin-bottom:16px;border-radius:4px;border:2px solid #4a5d23;background:#1a2508;flex-wrap:wrap;box-sizing:border-box;width:100%;">
+                    <i class="fas fa-bell" style="color:#6b8e23;font-size:1rem;flex-shrink:0;"></i>
+                    <span style="font-family:'Minecraft',sans-serif;font-size:0.76rem;color:#8ab04a;font-weight:700;flex:1;min-width:0;" data-ru="Уведомления включены" data-en="Notifications enabled">Уведомления включены</span>
+                    <button onclick="disableNotifications()" style="padding:5px 10px;background:transparent;color:#c62828;border:2px solid #8b1a1a;border-radius:2px;font-family:'Minecraft',sans-serif;font-size:0.7rem;cursor:pointer;font-weight:700;flex-shrink:0;" data-ru="Выключить" data-en="Disable">Выключить</button>
                 </div>
 
                 <div id="news-container" class="news-container">
