--- a/index.html
+++ b/index.html
@@ -3684,7 +3684,7 @@
     
     <div class="cookie-banner" id="cookie-banner">
         <div class="cookie-banner-text">
-            <div class="cookie-banner-title" id="cookie-banner-title-el"><img id="cookie-icon-banner" src="https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/cookie_item.png" alt="cookie" style="width:24px;height:24px;object-fit:contain;image-rendering:pixelated;vertical-align:middle;margin-right:6px;"><span data-ru="🍪 Уведомление о Cookie" data-en="🍪 Cookie Notice">🍪 Уведомление о Cookie</span></div>
+            <div class="cookie-banner-title" id="cookie-banner-title-el"><img id="cookie-icon-banner" src="https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/cookie_item.png" alt="cookie" style="width:24px;height:24px;object-fit:contain;image-rendering:pixelated;vertical-align:middle;margin-right:6px;"><span data-ru="Уведомление о Cookie" data-en="Cookie Notice">Уведомление о Cookie</span></div>
             <div class="cookie-banner-desc" data-ru="Мы используем cookies для сохранения сессии, лайков и настроек. Без них сайт не будет работать правильно." data-en="We use cookies to save your session, likes and preferences. Without them the site won't work correctly.">
                 We use cookies to save your session, likes and preferences. Without them the site won't work correctly.
             </div>
