--- a/index.html
+++ b/index.html
@@ -456,11 +456,13 @@
         }
 
         .author-name {
-            font-size: 1.2rem;
+            font-size: clamp(0.6rem, 2vw, 1.2rem);
             font-weight: 700;
             color: #3e2723;
             margin-bottom: 5px;
             font-family: 'Minecraft', sans-serif;
+            word-break: break-word;
+            overflow-wrap: break-word;
         }
 
         .author-role {
