--- a/index.html
+++ b/index.html
@@ -456,11 +456,11 @@
         }
 
         .author-name {
-            font-size: clamp(0.6rem, 2vw, 1.2rem);
-            font-weight: 700;
+            font-size: clamp(0.6rem, 2vw, 1.1rem);
+            font-weight: 400;
             color: #3e2723;
             margin-bottom: 5px;
-            font-family: 'Minecraft', sans-serif;
+            font-family: 'MinecraftSeven', 'Minecraft', sans-serif;
             word-break: break-word;
             overflow-wrap: break-word;
         }
