--- a/index.html
+++ b/index.html
@@ -718,14 +718,17 @@
             color: #3e2723;
             cursor: pointer;
             border-radius: 0;
-            font-weight: 700;
-            font-size: 0.78rem;
+            font-weight: 400;
+            font-size: 10px;
             transition: all 0.15s;
             position: relative;
             box-shadow: inset 0 -3px 0 rgba(0,0,0,0.1);
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            font-family: 'Minecraft', sans-serif;
+            font-family: 'MinecraftSeven', 'Minecraft', sans-serif;
+            -webkit-font-smoothing: none;
+            -moz-osx-font-smoothing: unset;
+            text-rendering: optimizeSpeed;
             display: flex;
             flex-direction: column;
             align-items: center;
