--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
             -webkit-font-smoothing: none;
             -moz-osx-font-smoothing: unset;
             text-rendering: optimizeSpeed;
+            text-shadow: 0.5px 0 0 currentColor, -0.5px 0 0 currentColor;
             display: flex;
             flex-direction: column;
             align-items: center;
